fixed contrast issue on buttons

--- a/chamber/styles/join.css
+++ b/chamber/styles/join.css
@@ -59,7 +59,7 @@ article {
 article a {
   display: inline-block;
   margin-top: 10px;
-  background-color: #007BFF;
+  background-color: #0267d3;
   color: #fff;
   padding: 10px 15px;
   text-decoration: none;
